overflow fix , map errors fix

--- a/src/components/selectBox/index.module.scss
+++ b/src/components/selectBox/index.module.scss
@@ -1,151 +1,150 @@
-
-@keyframes slideIn{
-	0% {
-		top:-999px;
-	}
-	1%{
-		top:calc(54px);
-	}
-	100% {
-		z-index: 999;
-		opacity: 1;
-		top:calc(54px + 10px);
-	}
+@keyframes slideIn {
+  0% {
+    top: -999px;
+  }
+  1% {
+    top: calc(54px);
+  }
+  100% {
+    z-index: 999;
+    opacity: 1;
+    top: calc(54px + 10px);
+  }
 }
 
-.inputWrapper{
-	display: flex;
-	flex: 2;
-	position: relative;
-	height: 100%;
-	justify-content: center;
-	align-items: center;
-	border-right: 1px solid #E0E0E0;
-	> img{
-		position: absolute;
-		left: 10px;
-	}
-	input{
-		padding:0;
-		padding-left: 45px;
-		border:none;
-		width: 100%;
-		height: 100%;
-		font-size: 16px;
-		color:#575B62;
-		&::placeholder{
-			color: #575B62;
-		}
-	}
-	.options{
-		position: absolute;
-		display: flex;
-		opacity: 0;
-		width: 100%;
-		width: calc(100% + 5em);
-		min-height: 52px;
-		max-height:156px;
-		top:-999px;
-		left:0;
-		background-color: #fff;
-		box-shadow: 0 10px 20px rgba(208, 73, 73, 0.19), 0 6px 6px rgba(0,0,0,0.23);
-		border-radius:2.5px;
-		overflow: scroll;
-		&.open{
-			animation: slideIn .25s 1 forwards;
-		}
-		ul{
-			margin: 0;
-			padding: 0;
-			display: flex;
-			width: 100%;
-			flex-direction: column;
-			li{
-				display: flex;
-				flex:1;
-				min-height: 52px;
-				padding: 0 .5em;
-				align-items:center;
-				justify-content: space-between;
-				&:not(.person):hover{
-					cursor: pointer;
-					background-color: #F1F3FA;
-				}
-			}
-		}
-		&.dateSelect{
-			left:unset;
-			flex-direction: column;
-			padding: .5em;
-			height: auto;
-			max-height: unset;
-			.monthTitle{
-				display: flex;
-				flex:1;
-				justify-content: space-evenly;
-				align-items: center;
-				padding: .5em;
-				span{
-					display: flex;
-					padding: .5em;
-					cursor: pointer;
-				}
-			}
-			.dayWrapper{
-				display: flex;
-				flex-direction: row;
-				justify-content: space-evenly;
-				padding: 0 .5em;
-				margin-bottom: .5em;
-				span{
-					display: flex;
-					font-size: 11px;
-					color: #888D99;
-					flex-grow: 1;
-					flex-basis: 0;
-					justify-content: center;
-					align-items: center;
-				}
-			}
-			.calendar{
-				display: flex;
-				flex-wrap: wrap;
-				span{
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					width:calc(100% / 7);
-					height: 28px;
-					color: #575B62;
-					cursor: pointer;
-					transition: all .1s linear;
-					&:not(.noHover):hover{
-						background-color: #F12A15;
-						color: #fff;
-					}
-				}
-			}
-		}
-		&.personSelect{
-			left:unset;
-			.person{
-				flex:1;
-				padding:0;
-				div{
-					display: flex;
-					flex:1;
-					justify-content: space-evenly;
-					align-items: center;
-					padding: .5em;
-					img{
-						width: 12px;
-						margin: 0 .5em;
-						&:hover{
-							cursor: pointer;
-						}
-					}
-				}
-			}
-		}
-	}
+.inputWrapper {
+  display: flex;
+  flex: 2;
+  position: relative;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #E0E0E0;
+  >img {
+    position: absolute;
+    left: 10px;
+  }
+  input {
+    padding: 0;
+    padding-left: 45px;
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    color: #575B62;
+    &::placeholder {
+      color: #575B62;
+    }
+  }
+  .options {
+    position: absolute;
+    display: flex;
+    opacity: 0;
+    width: 100%;
+    width: calc(100% + 5em);
+    min-height: 52px;
+    max-height: 156px;
+    top: -999px;
+    left: 0;
+    background-color: #fff;
+    box-shadow: 0 10px 20px rgba(208, 73, 73, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 2.5px;
+    overflow: auto;
+    &.open {
+      animation: slideIn .25s 1 forwards;
+    }
+    ul {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      li {
+        display: flex;
+        flex: 1;
+        min-height: 52px;
+        padding: 0 .5em;
+        align-items: center;
+        justify-content: space-between;
+        &:not(.person):hover {
+          cursor: pointer;
+          background-color: #F1F3FA;
+        }
+      }
+    }
+    &.dateSelect {
+      left: unset;
+      flex-direction: column;
+      padding: .5em;
+      height: auto;
+      max-height: unset;
+      .monthTitle {
+        display: flex;
+        flex: 1;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: .5em;
+        span {
+          display: flex;
+          padding: .5em;
+          cursor: pointer;
+        }
+      }
+      .dayWrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 0 .5em;
+        margin-bottom: .5em;
+        span {
+          display: flex;
+          font-size: 11px;
+          color: #888D99;
+          flex-grow: 1;
+          flex-basis: 0;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+      .calendar {
+        display: flex;
+        flex-wrap: wrap;
+        span {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: calc(100% / 7);
+          height: 28px;
+          color: #575B62;
+          cursor: pointer;
+          transition: all .1s linear;
+          &:not(.noHover):hover {
+            background-color: #F12A15;
+            color: #fff;
+          }
+        }
+      }
+    }
+    &.personSelect {
+      left: unset;
+      .person {
+        flex: 1;
+        padding: 0;
+        div {
+          display: flex;
+          flex: 1;
+          justify-content: space-evenly;
+          align-items: center;
+          padding: .5em;
+          img {
+            width: 12px;
+            margin: 0 .5em;
+            &:hover {
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
 }
